[package]
name = "filetransfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime_guess = "2.0.4"
rocket = "=0.5.0-rc.3"


[dependencies.uuid]
version="1.3.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
